# zops.anatomy

./: README.md  conftest.py  pyproject.toml  setup.py
templates/: .gitignore  anatomy-features.yml  anatomy-playbook.yml
tests/: test_anatomy.py  test_feature.py  test_tree.py
zops/anatomy/: anatomy.py  assertions.py  cli.py  engine.py  feature_layer.py  playbook.py  playbook_layer.py  text.py  tree_layer.py  yaml.py
zops/anatomy/_tests/: test_anatomy.py  test_engine.py  test_feature_layer.py  test_playbook.py  test_playbook_layer.py  test_tree_layer.py  test_yaml.py
zops/anatomy/_tests/test_playbook/: anatomy-features.yml  anatomy-playbook.yml  ansible-playbook.yml
zops/anatomy/_tests/test_playbook_layer/: anatomy-features.yml  anatomy-playbook.yml
zops/anatomy/layers/: feature.py  playbook.py  tree.py
zops/anatomy/layers/_tests/: test_feature.py  test_feature_layer.py  test_playbook_layer.py  test_tree.py  test_tree_layer.py
